--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitoramento</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Monitoramento IOT - Temperatura</h1>
 
-    <div>
+    <div class = "sensor-box">
         <p>Temperatura Atual:</p>
         <p> 0.0 °C </p>
         <button>Atualizar</button>
