--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <div class = "sensor-box">
         <p>Temperatura Atual:</p>
-        <p> 0.0 °C </p>
-        <button>Atualizar</button>
+        <p id= "temperatura" class="temperatura"> 24.5 °C</p>
+        <button onclick="simularLeitura()">Simular Leitura</button>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
